# HPS

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE.md  README.md
include/: HPS_Base.hpp  HPS_Grid.hpp  HPS_IO.hpp  HPS_Matrix.hpp  HPS_Merge.hpp  HPS_Methods.hpp  HPS_Patch.hpp  HPS_PatchSolver.hpp  HPS_Poisson.hpp  HPS_Vector.hpp  HPS_Visualize.hpp
src/: HPS_IO.cpp  HPS_Matrix.cpp  HPS_Merge.cpp  HPS_Methods.cpp  HPS_Patch.cpp  HPS_PatchSolver.cpp  HPS_Poisson.cpp  HPS_Visualize.cpp
src/apps/: 4to1_merge.cpp  HPS.cpp  convergence.cpp  main.cpp
test/: CMakeLists.txt  TestGrid.cpp  TestMatrix.cpp  TestPatchSolver.cpp  TestVector.cpp  main.cpp
